--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -49,14 +49,14 @@
     <div class="parallax-container">
         <div class="parallax"><img src="../assets/img/mulher-indiana-carro.jpg"></div>
     </div>
-    <div class="section white">
+    <div class="quotations section white">
         <div class="container">
             <div class="row">
                 <div class="col s12 offset-s4"><span class="flow-text">Choose a Insurance Company</span></div>
             </div>
             <div class="row">
                 <form class="col s12">
-                    <table class="cotations">
+                    <table>
                         <thead>
                             <tr>
                                 <th>Insurance Company</th>
