--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -24,22 +24,31 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="vehicle_brand" type="text" class="validate">
+                            <input id="vehicle_brand" type="text" class="validate"
+                            [(ngModel)]="vehicle.brand" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_brand">Vehicle Brand</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="vehicle_model" type="text" class="validate">
+                            <input id="vehicle_model" type="text" class="validate"
+                            [(ngModel)]="vehicle.model" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_model">Vehicle Model</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="vehicle_fabrication_date" type="text" class="datepicker">
+                            <input id="vehicle_fabrication_date" type="text" class="datepicker"
+                             (focus)="openDatePicker($event)">
                             <label for="vehicle_fabrication_date">Vehicle Fabrication Date</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="vehicle_model_year" type="number" class="validate">
+                            <input id="vehicle_model_year" type="number" class="validate" 
+                            [(ngModel)]="vehicle.modelYear" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_model_year">Vehicle Model Year</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <a class="waves-effect waves-light btn-large" (click)="loadOffers()"><i class="material-icons left">cloud</i>Search Offers</a>
                         </div>
                     </div>
                 </form>
@@ -69,12 +78,12 @@
                         </thead>
 
                         <tbody>
-                            <tr *ngFor="let vehicleCotation of vehicleCotations">
-                                <td>{{vehicleCotation.insuranceCompany.fantasyName}}</td>
-                                <td>{{vehicleCotation.insuranceCompany.cnpj}}</td>
-                                <td>{{vehicleCotation.insuranceCompany.email}}</td>
-                                <td>{{vehicleCotation.insuranceCompany.phone}}</td>
-                                <td>{{vehicleCotation.price}}</td>
+                            <tr *ngFor="let offer of insuranceCompanyOffers">
+                                <td>{{offer.fantasyName}}</td>
+                                <td>{{offer.cnpj}}</td>
+                                <td>{{offer.email}}</td>
+                                <td>{{offer.phone}}</td>
+                                <td>{{offer.vehicleQuotations[0].price}}</td>
                                 <td><a class="waves-effect waves-light btn">Pay</a></td>
                             </tr>
                         </tbody>
