Criada validações para o campo fabricação e implementado comportamento fluído a tela inicial.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,6 @@
 <body>
     <app-header></app-header>
     <div class="parallax-container">
-
         <div class="parallax"><img src="../assets/img/homem-branco-carro.jpg"></div>
     </div>
     <div class="section white">
@@ -24,31 +23,35 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="vehicle_brand" type="text" class="validate"
+                            <input id="vehicle_brand" type="text" class="validate" required="required"
                             [(ngModel)]="vehicle.brand" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_brand">Vehicle Brand</label>
+                            <span class="helper-text" data-error="required" data-success="Thank's for improve this!"></span>
                         </div>
                         <div class="input-field col s6">
-                            <input id="vehicle_model" type="text" class="validate"
+                            <input id="vehicle_model" type="text" class="validate" required="required"
                             [(ngModel)]="vehicle.model" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_model">Vehicle Model</label>
+                            <span class="helper-text" data-error="required" data-success="Bravo \o/"></span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="vehicle_fabrication_date" type="text" class="datepicker"
-                             (focus)="openDatePicker($event)">
+                            required="required" (focus)="openDatePicker()">
                             <label for="vehicle_fabrication_date">Vehicle Fabrication Date</label>
+                            <span class="helper-text" data-error="required" data-success="It's all right!"></span>
                         </div>
                         <div class="input-field col s6">
-                            <input id="vehicle_model_year" type="number" class="validate" 
+                            <input id="vehicle_model_year" type="number" class="validate"  required="required"
                             [(ngModel)]="vehicle.modelYear" [ngModelOptions]="{standalone: true}">
                             <label for="vehicle_model_year">Vehicle Model Year</label>
+                            <span class="helper-text" data-error="required" data-success="It's valid:)"></span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s12">
-                            <a class="waves-effect waves-light btn-large" (click)="loadOffers()"><i class="material-icons left">cloud</i>Search Offers</a>
+                            <a id="search-offers" class="waves-effect waves-light btn-large" (click)="loadOffers()"><i class="material-icons left">monetization_on</i>Search Offers</a>
                         </div>
                     </div>
                 </form>
@@ -58,7 +61,7 @@
     <div class="parallax-container">
         <div class="parallax"><img src="../assets/img/mulher-indiana-carro.jpg"></div>
     </div>
-    <div class="quotations section white">
+    <div id="offers" class="section white">
         <div class="container">
             <div class="row">
                 <div class="col s12 offset-s4"><span class="flow-text">Choose a Insurance Company</span></div>
@@ -84,7 +87,8 @@
                                 <td>{{offer.email}}</td>
                                 <td>{{offer.phone}}</td>
                                 <td>{{offer.vehicleQuotations[0].price}}</td>
-                                <td><a class="waves-effect waves-light btn">Pay</a></td>
+                                <td><a class="waves-effect waves-light btn" (click)="chooseOffer(offer._id)">
+                                    <i class="material-icons">done</i></a></td>
                             </tr>
                         </tbody>
                     </table>
