--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <nav>
   <div class="nav-wrapper">
+      <a href="#!" class="brand-logo"><i class="material-icons">directions_car</i>ZeroBuy</a>
   </div>
 </nav>
