--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 nav {
     background-image: linear-gradient(34deg, rgb(8, 45, 94), rgb(18, 112, 167), 
     rgb(136, 237, 255));
+    padding-left: 15px;
 }
