Criado component home e corrigido problemas de rotas.

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav>
   <div class="nav-wrapper">
-      <a href="#!" class="brand-logo"><i class="material-icons">directions_car</i>ZeroBuy</a>
+      <a href="#!" class="brand-logo"><i class="material-icons">directions_car</i>Safoffer</a>
   </div>
 </nav>
